cmake_minimum_required(VERSION 3.16)

include(CTest)
enable_testing()

set(GTEST_ROOT "${GTEST_LIBRARY_PATH}")
find_package(GTest REQUIRED)

set(CMAKE_FIND_LIBRARY_SUFFIXES "" ".a" ".lib")
list(APPEND CMAKE_FRAMEWORK_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../libs/XPMP2/build/XPMP2.framework/Versions/1.0")
list(APPEND CMAKE_FRAMEWORK_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../libs/XPMP2/build")
list(APPEND CMAKE_FRAMEWORK_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../libs/PPL/build")
list(APPEND CMAKE_FRAMEWORK_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../build/lib")

find_library(PPL_LIBRARY NAMES PPL)
find_library(XPMP2_LIBRARY NAMES XPMP2)
#find_library(XPMP2_LIBRARY libXPMP2.a "${XPMP2_LIBRARY_BUILD_DIR}")
add_library(libXPMP2 STATIC IMPORTED GLOBAL)
set_property(TARGET libXPMP2 PROPERTY IMPORTED_LOCATION "${XPMP2_LIBRARY}")

set(OPENAL_LIBRARY_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../libs/PPL/include/openal-soft/build")
if(APPLE)
    find_library(OPENAL_LIBRARY libopenal.dylib "${OPENAL_LIBRARY_BUILD_DIR}")
    add_library(openal SHARED IMPORTED GLOBAL)
    set_property(TARGET openal PROPERTY IMPORTED_IMPLIB "${OPENAL_LIBRARY}")
elseif(WIN32)
    find_library(OPENAL_LIBRARY libOpenAL32.dll "${OPENAL_LIBRARY_BUILD_DIR}")
    add_library(openal SHARED IMPORTED GLOBAL)
    set_property(TARGET openal PROPERTY IMPORTED_IMPLIB "${OPENAL_LIBRARY}")
else()
    find_library(OPENAL_LIBRARY libopenal.so "${OPENAL_LIBRARY_BUILD_DIR}")
    add_library(openal SHARED IMPORTED GLOBAL)
    set_property(TARGET openal PROPERTY IMPORTED_IMPLIB "${OPENAL_LIBRARY}")
endif()

if(APPLE)
    set(SPEECH_LIBRARY_MAC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../libs/libspeechmac/build")
	find_library(SPEECH_LIBRARY libspeechmac.a "${SPEECH_LIBRARY_MAC_DIR}")
	add_library(libspeech STATIC IMPORTED GLOBAL)
    set_property(TARGET libspeech PROPERTY IMPORTED_LOCATION "${SPEECH_LIBRARY}")
elseif(WIN32)
    set(SPEECH_LIBRARY_WIN_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../libs/libspeechwin/build/Debug")
    find_library(SPEECH_LIBRARY libspeechwin "${SPEECH_LIBRARY_WIN_DIR}")
    add_library(libspeech SHARED IMPORTED GLOBAL)
    set_property(TARGET libspeech PROPERTY IMPORTED_IMPLIB "${SPEECH_LIBRARY}")
else()
    set(SPEECH_LIBRARY_LIN_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../libs/libspeechlin/build")
    find_library(SPEECH_LIBRARY libspeechlin.a "${SPEECH_LIBRARY_LIN_DIR}")
    add_library(libspeech STATIC IMPORTED GLOBAL)
    set_property(TARGET libspeech PROPERTY IMPORTED_LOCATION "${SPEECH_LIBRARY}")
endif()

message("PPL_LIBRARY" = ${PPL_LIBRARY})
message("XPMP2_LIBRARY" = ${XPMP2_LIBRARY})
message("OPENAL_LIBRARY" = ${OPENAL_LIBRARY})
message("SPEECH_LIBRARY" = ${SPEECH_LIBRARY})

add_subdirectory(libworld)
add_subdirectory(libworld_test)
add_subdirectory(libdataxp)
add_subdirectory(libdataxp_test)
add_subdirectory(libai)
add_subdirectory(libai_test)
add_subdirectory(pluginxp)
